--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="image">图片</string>
     <string name="check">选中</string>
     <string name="skip">直接跳过</string>
+    <string name="alarm">提醒</string>
     
     <string name="sign_up">注册</string>
     <string name="sign_up_by_phone">手机注册</string>
@@ -126,6 +127,9 @@
     <string name="new_item">新建消费</string>
     <string name="approve_info_hint">审批情况 ></string>
     <string name="approve_info">审批情况</string>
+    <string name="approved">已通过</string>
+    <string name="rejected">已退回</string>
+    <string name="ready_to_approved">待审批</string>
     
     <string name="mark">标记</string>
     <string name="stat_done">已报销</string>
@@ -230,6 +234,7 @@
     <string name="prompt_max_image_count">啊哦，最多只能添加16张图片</string>   
     <string name="prompt_feedback">告诉我们你在使用过程中遇到的问题，或对产品提出你的建议。我们会在1个工作日内给你答复。</string>
     <string name="prompt_feedback_phone">请留下联系方式，方便我们与你沟通</string>
+    <string name="prompt_sender">发送者：</string>
     
     <string name="error_wrong_code">验证码错误</string>
     <string name="error_no_code">未获取到任何验证码</string>
@@ -313,6 +318,7 @@
     <string name="succeed_in_sending_comment">发表评论成功</string>
     <string name="succeed_in_submitting_report">提交报告成功</string>
     <string name="succeed_in_signing_up">注册成功!正在获取数据</string>
+    <string name="succeed_in_alerting">已提醒对方审批报告</string>
     
     <string name="failed_to_get_code">获取验证码失败</string>
     <string name="failed_to_get_data">获取数据失败</string>
@@ -353,6 +359,7 @@
     <string name="failed_to_sign_up">注册失败</string>
     <string name="failed_to_sign_out">登出失败</string>
     <string name="failed_to_change_password">修改密码失败</string>
+    <string name="failed_to_alert">提醒发送失败</string>
     
     <string name="no_location">无法获取地点信息</string>
     <string name="no_member">当前组没有其他成员</string>
@@ -384,6 +391,6 @@
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     
-    <string name="versionControl">春秋</string>
+    <string name="versionControl">战国</string>
     
 </resources>
