--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -91,7 +91,7 @@
     <string name="choose_vendor">选择商家</string>
     <string name="choose_location">选择城市</string>
     <string name="choose_tag">选择标签</string>
-    <string name="choose_member">选择参与者</string>
+    <string name="choose_member">选择参与人</string>
     <string name="choose_from_camera">拍照</string>
     <string name="choose_from_gallery">从手机相册选择</string>
     <string name="all_cities">全部城市</string>
@@ -114,8 +114,8 @@
     <string name="cc">抄&#160;&#160;&#160;&#8201;送</string>
     <string name="total_amount">总&#160;&#160;&#160;&#8201;额</string>
     <string name="item_count">笔消费</string>
-    <string name="choose_manager">选择经理</string>
-    <string name="choose_cc">选择抄送</string>
+    <string name="choose_manager">选择审批人</string>
+    <string name="choose_cc">选择抄送人</string>
     <string name="submit">提交</string>
     <string name="approve">同意</string>
     <string name="reject">拒绝</string>
@@ -130,6 +130,7 @@
     <string name="approved">已通过</string>
     <string name="rejected">已退回</string>
     <string name="ready_to_approved">待审批</string>
+    <string name="report_no_name">无标题报告</string>
     
     <string name="mark">标记</string>
     <string name="stat_done">已报销</string>
@@ -351,6 +352,7 @@
     <string name="failed_to_send_invite">邀请发送失败</string>
     <string name="failed_to_send_reply">邀请回复发送失败</string>
     <string name="failed_to_send_comment">评论发表失败</string>
+    <string name="failed_to_submit_report">提交报告失败</string>
     <string name="failed_to_send_email">邮件发送失败</string>
     <string name="failed_to_send_message">短信发送失败</string>
     <string name="failed_to_modify">修改失败</string>
@@ -364,12 +366,13 @@
     <string name="no_location">无法获取地点信息</string>
     <string name="no_member">当前组没有其他成员</string>
     <string name="no_comment">当前没有任何评论</string>
-    <string name="no_manager">未选择经理</string>
+    <string name="no_manager">未选择审批人</string>
     <string name="no_cc">未选择CC</string>
     <string name="no_unarchived_items">没有可被添加的消费</string>
     <string name="no_messages">当前没有任何消息</string>
     <string name="no_categories">当前没有任何类别</string>
     <string name="no_tags">当前没有任何标签</string>
+    <string name="no_filter_result">抱歉，没有找到符合的结果</string>
     
     <string name="vendor_taxi">出租车</string>
     <string name="vendor_flight">飞机票</string>
