--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -394,6 +394,6 @@
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     
-    <string name="versionControl">战国</string>
+    <string name="versionControl">秦</string>
     
 </resources>
