--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -302,7 +302,8 @@
     <string name="error_report_approved">报告已被审批</string>
     <string name="error_operation_failed">操作失败</string>
     <string name="error_submit_report_empty">请添加消费后再提交报告</string>
-    <string name="error_item_submit">消费缺少信息，报告不可被提交</string>
+    <string name="error_submit_report_item_not_uploaded">消费未被上传，报告不可被提交</string>
+    <string name="error_submit_report_item_miss_info">消费缺少信息，报告不可被提交</string>
     
     <string name="succeed_in_exporting">报告导出成功</string>
     <string name="succeed_in_saving_item">此笔消费保存成功</string>
