--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -172,7 +172,7 @@
     <string name="join_group">加入团队</string>
     <string name="reject_invite">拒绝邀请</string>
     <string name="get_invoice_prompt">发票抬头：</string>
-    <string name="invoice_invalid">还没公司，开啥发票</string>
+    <string name="invoice_invalid">还没公司，开啥发票o(╯□╰)o</string>
     <string name="category_management">类别管理</string>
     <string name="edit_category">编辑类别</string>
     <string name="choose_icon">选择图标</string>
@@ -221,11 +221,11 @@
     <string name="prompt_loading">正在努力加载中&#8230;</string>
     <string name="prompt_data_error">数据读取失败</string>
     <string name="prompt_sign_up_succeed">注册成功！</string>
-    <string name="prompt_sign_up_succeed_with_email">注册成功！激活邮件已发送，请到邮箱中查看！</string>
-    <string name="prompt_email_sent">邮件已发送，请查阅邮箱！</string>
+    <string name="prompt_sign_up_succeed_with_email">注册成功！请到邮箱中查收账号激活邮件。</string>
+    <string name="prompt_email_sent">邮件已发送，查收你的邮箱！</string>
     <string name="prompt_message_sent">验证短信已发送</string>
-    <string name="prompt_password_changed">密码修改成功！</string>
-    <string name="prompt_default_manager_changed">默认上级修改成功！</string>
+    <string name="prompt_password_changed">密码修改成功</string>
+    <string name="prompt_default_manager_changed">默认上级修改成功</string>
     <string name="prompt_feedback_sent">反馈发送成功！</string>
     <string name="prompt_invite_list_failed">获取邀请列表失败</string>
     <string name="prompt_invite_reply_sent">邀请回复发送成功！</string>
@@ -240,7 +240,7 @@
     <string name="prompt_sync_ongoing">正在同步中</string>
     <string name="prompt_report_approved">报告已通过</string>
     <string name="prompt_report_rejected">报告已退回</string>
-    <string name="prompt_max_image_count">啊哦，最多只能添加16张图片</string>   
+    <string name="prompt_max_image_count">对不起，最多只能添加16张图片</string>
     <string name="prompt_feedback">告诉我们你在使用过程中遇到的问题，或对产品提出你的建议。我们会在1个工作日内给你答复。</string>
     <string name="prompt_feedback_phone">请留下联系方式，方便我们与你沟通</string>
     <string name="prompt_sender">发送者：</string>
@@ -264,7 +264,7 @@
     <string name="error_old_password_empty">请输入旧密码</string>
     <string name="error_new_password_empty">请输入新密码</string>
     <string name="error_confirm_password_empty">请再次输入密码</string>
-    <string name="error_same_password">新旧密码重复了，请再选一个新密码吧：）</string>
+    <string name="error_same_password">新旧密码重复了，再选一个新密码吧：）</string>
     <string name="error_wrong_old_password">旧密码有误</string>
     <string name="error_wrong_confirm_password">新密码两次输入不一致</string>
     <string name="error_email_or_phone_empty">请输入手机号或邮箱</string>
@@ -313,21 +313,21 @@
     <string name="error_choose_following">选择后续审批人和抄送失败</string>
     
     <string name="succeed_in_exporting">报告导出成功</string>
-    <string name="succeed_in_saving_item">此笔消费保存成功</string>
+    <string name="succeed_in_saving_item">保存成功</string>
     <string name="succeed_in_saving_report">报告保存成功</string>
-    <string name="succeed_in_saving_avatar">头像保存成功，正在上传</string>
-    <string name="succeed_in_uploading_avatar">头像上传成功</string>
+    <string name="succeed_in_saving_avatar">头像保存成功</string>
+    <string name="succeed_in_uploading_avatar">上传成功</string>
     <string name="succeed_in_creating_category">创建类别成功</string>
     <string name="succeed_in_creating_tag">创建标签成功</string>
     <string name="succeed_in_modifying">修改成功</string>
-    <string name="succeed_in_modifying_user_info">用户信息修改成功</string>
-    <string name="succeed_in_modifying_category">修改类别成功</string>
-    <string name="succeed_in_modifying_tag">修改标签成功</string>
-    <string name="succeed_in_deleting_category">删除类别成功</string>
-    <string name="succeed_in_deleting_tag">删除标签成功</string>
-    <string name="succeed_in_sending_invite">发送邀请成功</string>
-    <string name="succeed_in_sending_comment">发表评论成功</string>
-    <string name="succeed_in_submitting_report">提交报告成功</string>
+    <string name="succeed_in_modifying_user_info">修改成功</string>
+    <string name="succeed_in_modifying_category">修改成功</string>
+    <string name="succeed_in_modifying_tag">修改成功</string>
+    <string name="succeed_in_deleting_category">删除成功</string>
+    <string name="succeed_in_deleting_tag">删除成功</string>
+    <string name="succeed_in_sending_invite">发送成功</string>
+    <string name="succeed_in_sending_comment">发表成功</string>
+    <string name="succeed_in_submitting_report">提交成功</string>
     <string name="succeed_in_signing_up">注册成功!正在获取数据</string>
     <string name="succeed_in_alerting">已提醒对方审批报告</string>
     <string name="succeed_in_choosing_following">选择后续审批人和抄送成功</string>
@@ -338,25 +338,25 @@
     <string name="failed_to_get_vendor_no_data">没有获取到商家信息, 请手动输入</string>
     <string name="failed_to_get_gps_info">未能定位你的位置，请手动输入商家名或稍后再试</string>
     <string name="failed_to_get_version">获取版本号失败</string>
-    <string name="failed_to_export">报告导出失败</string>
-    <string name="failed_to_read_image">读取图片文件失败</string>
+    <string name="failed_to_export">导出失败</string>
+    <string name="failed_to_read_image">图片读取失败</string>
     <string name="failed_to_save_avatar">头像保存失败</string>
-    <string name="failed_to_save_invoice">照片保存失败</string>
-    <string name="failed_to_save_item">此笔消费保存失败</string>
+    <string name="failed_to_save_invoice">保存失败</string>
+    <string name="failed_to_save_item">保存失败</string>
     <string name="failed_to_save_report">报告保存失败</string>
-    <string name="failed_to_download_avatar">头像下载失败</string>
+    <string name="failed_to_download_avatar">下载失败</string>
     <string name="failed_to_download_invoice">照片下载失败</string>
     <string name="failed_to_upload_invoice">照片上传失败</string>
     <string name="failed_to_upload_avatar">头像上传失败</string>
-    <string name="failed_to_create_item">创建此笔消费失败</string>
-    <string name="failed_to_create_report">创建审批报告失败</string>
-    <string name="failed_to_create_category">创建类别失败</string>
-    <string name="failed_to_create_tag">创建标签失败</string>
-    <string name="failed_to_modify_item">修改此笔消费失败</string>
-    <string name="failed_to_modify_category">修改类别失败</string>
-    <string name="failed_to_modify_tag">修改标签失败</string>
-    <string name="failed_to_delete_category">删除类别失败</string>
-    <string name="failed_to_delete_tag">删除标签失败</string>
+    <string name="failed_to_create_item">创建消费失败</string>
+    <string name="failed_to_create_report">创建失败</string>
+    <string name="failed_to_create_category">创建失败</string>
+    <string name="failed_to_create_tag">创建失败</string>
+    <string name="failed_to_modify_item">修改失败</string>
+    <string name="failed_to_modify_category">修改失败</string>
+    <string name="failed_to_modify_tag">修改失败</string>
+    <string name="failed_to_delete_category">删除失败</string>
+    <string name="failed_to_delete_tag">删除失败</string>
     <string name="failed_to_search">网络搜索失败</string>
     <string name="failed_to_send_feedback">反馈发送失败</string>
     <string name="failed_to_change_manager">默认上级修改失败</string>
@@ -377,8 +377,8 @@
     <string name="no_location">无法获取地点信息</string>
     <string name="no_member">当前组没有其他成员</string>
     <string name="no_comment">当前没有任何评论</string>
-    <string name="no_manager">未选择审批人</string>
-    <string name="no_cc">未选择CC</string>
+    <string name="no_manager">没有选择审批人</string>
+    <string name="no_cc">没有选择抄送人</string>
     <string name="no_unarchived_items">没有可被添加的消费</string>
     <string name="no_messages">当前没有任何消息</string>
     <string name="no_categories">当前没有任何类别</string>
