fix bugs of push

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -306,7 +306,7 @@
     <string name="error_request_network_unavailable">网络未连接，无法发送请求</string>
     <string name="error_gps_unavailable">定位服务不可用，请打开定位服务或手动输入商家名称</string>
     <string name="error_self_as_manager">不能选择自己作为上级</string>
-    <string name="error_no_group">你还没加入任何组</string>
+    <string name="error_no_group">你还没加入任何公司</string>
     <string name="error_report_approved">报告已被审批</string>
     <string name="error_report_deleted">报告已被删除</string>
     <string name="error_operation_failed">操作失败</string>
@@ -377,7 +377,7 @@
     <string name="failed_to_alert">提醒发送失败</string>
     
     <string name="no_location">无法获取地点信息</string>
-    <string name="no_member">当前组没有其他成员</string>
+    <string name="no_member">当前公司没有其他成员</string>
     <string name="no_comment">当前没有任何评论</string>
     <string name="no_manager">没有选择审批人</string>
     <string name="no_cc">没有选择抄送人</string>
