--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,6 +376,7 @@
     <string name="failed_to_alert">提醒发送失败</string>
     
     <string name="no_location">无法获取地点信息</string>
+    <string name="no_company">尚未加入任何公司</string>
     <string name="no_member">当前公司没有其他成员</string>
     <string name="no_comment">当前没有任何评论</string>
     <string name="no_manager">没有选择审批人</string>
