improve detail of choose member

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,6 +170,9 @@
     <string name="nickname">昵称</string>
     <string name="change_password">修改密码</string>
     <string name="default_manager">上级设置</string>
+    <string name="my_manager">我的上级</string>
+    <string name="all_members">所有成员</string>
+    <string name="manager_not_set">还没有设置上级</string>
     <string name="not_binding">未绑定</string>
     <string name="icon">图标</string>
     <string name="sub_category">子类别</string>
@@ -227,24 +230,12 @@
     <string name="input_user_contact">请输入对方手机号或邮箱</string>
     
     <string name="prompt_loading">正在努力加载中&#8230;</string>
-    <string name="prompt_data_error">数据读取失败</string>
     <string name="prompt_sign_out">确认要切换当前账号</string>
-    <string name="prompt_sign_up_succeed">注册成功！</string>
-    <string name="prompt_sign_up_succeed_with_email">注册成功！请到邮箱中查收账号激活邮件。</string>
-    <string name="prompt_email_sent">邮件已发送，查收你的邮箱！</string>
-    <string name="prompt_message_sent">验证短信已发送</string>
-    <string name="prompt_password_changed">密码修改成功</string>
-    <string name="prompt_default_manager_changed">默认上级修改成功</string>
-    <string name="prompt_feedback_sent">反馈发送成功！</string>
-    <string name="prompt_invite_list_failed">获取邀请列表失败</string>
-    <string name="prompt_invite_reply_sent">邀请回复发送成功！</string>
     <string name="prompt_save_prove_ahead_item">这是一笔预申请的消费，您是想仅保存此笔消费还是要直接发送给上级审批？</string>
     <string name="prompt_delete_item">是否要删除此笔消费？</string>
     <string name="prompt_delete_report">是否要删除此报告？</string>
     <string name="prompt_delete_category">是否要删除此类别？</string>
     <string name="prompt_delete_tag">是否要删除此标签？</string>
-    <string name="prompt_delete_succeed">删除成功</string>
-    <string name="prompt_delete_failed">删除失败</string>
     <string name="prompt_press_back_to_exit">再按一次返回键退出应用</string>
     <string name="prompt_sync_ongoing">正在同步中</string>
     <string name="prompt_report_approved">报告已通过</string>
@@ -320,7 +311,15 @@
     <string name="error_submit_report_item_not_uploaded">消费未被上传，报告不可被提交</string>
     <string name="error_submit_report_item_miss_info">消费缺少信息，报告不可被提交</string>
     <string name="error_timeout">你的账号已经其他地方登录，本地已经下线。</string>
-    
+
+    <string name="succeed_in_sign_up">注册成功！</string>
+    <string name="succeed_in_sign_up_with_email">注册成功！请到邮箱中查收账号激活邮件。</string>
+    <string name="succeed_in_sending_email">邮件已发送，查收你的邮箱！</string>
+    <string name="succeed_in_sending_message">验证短信已发送</string>
+    <string name="succeed_in_changing_password">密码修改成功</string>
+    <string name="succeed_in_changing_default_manager">默认上级修改成功</string>
+    <string name="succeed_in_sending_feedback">反馈发送成功！</string>
+    <string name="succeed_in_sending_invite_reply">邀请回复发送成功！</string>
     <string name="succeed_in_exporting">报告导出成功</string>
     <string name="succeed_in_saving_item">保存成功</string>
     <string name="succeed_in_saving_report">报告保存成功</string>
@@ -339,7 +338,9 @@
     <string name="succeed_in_submitting_report">提交成功</string>
     <string name="succeed_in_signing_up">注册成功!正在获取数据</string>
     <string name="succeed_in_alerting">已提醒对方审批报告</string>
-    
+    <string name="succeed_in_deleting">删除成功</string>
+
+    <string name="failed_to_read_data">数据读取失败</string>
     <string name="failed_to_get_code">获取验证码失败</string>
     <string name="failed_to_get_data">获取数据失败</string>
     <string name="failed_to_get_vendor">获取商家列表失败, 请手动输入</string>
@@ -381,6 +382,8 @@
     <string name="failed_to_sign_out">登出失败</string>
     <string name="failed_to_change_password">修改密码失败</string>
     <string name="failed_to_alert">提醒发送失败</string>
+    <string name="failed_to_get_invite_list">获取邀请列表失败</string>
+    <string name="failed_to_delete">删除失败</string>
     
     <string name="no_location">无法获取地点信息</string>
     <string name="no_company">尚未加入任何公司</string>
