--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,6 @@
     <string name="message">留言</string>
     <string name="report_over_flow">99+</string>
     <string name="export">导出</string>
-    <string name="export_report">导出报告</string>
     <string name="new_item">新建消费</string>
     <string name="approve_info_hint">审批情况 ></string>
     <string name="approve_info">审批情况</string>
@@ -172,7 +171,7 @@
     <string name="change_password">修改密码</string>
     <string name="default_manager">上级设置</string>
     <string name="my_manager">我的上级</string>
-    <string name="all_members">所有成员</string>
+    <string name="my_colleagues">我的同事</string>
     <string name="manager_not_set">还没有设置上级</string>
     <string name="not_binding">未绑定</string>
     <string name="icon">图标</string>
@@ -285,6 +284,7 @@
     <string name="error_delete_item_submitted">此笔消费已提交，无法删除</string>
     <string name="error_delete_report_submitted">报告已提交，无法删除</string>
     <string name="error_export_network_unavailable">网络未连接，无法导出</string>
+    <string name="error_export_report_not_uploaded">报告未同步到服务器，无法导出</string>
     <string name="error_export_not_finished">报销未完成，无法导出</string>
     <string name="error_save_network_unavailable">网络未连接，无法保存</string>
     <string name="error_send_network_unavailable">网络未连接，无法发送审批报告</string>
