add check group

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="rmb">元</string>
     <string name="rmb_symbol">¥</string>
     <string name="percent">%</string>
+    <string name="point">·</string>
     <string name="ten_thousand">万</string>
     <string name="one_hundred_million">亿</string>
     <string name="year">年</string>
@@ -158,6 +159,7 @@
     <string name="stat_by_tag">标签统计</string>
     <string name="stat_by_member">人员统计</string>
     <string name="choose_month">选择月份</string>
+    <string name="deleted_category">已删除类别</string>
     
     <string name="personal_center">个人中心</string>
     <string name="sign_out">切换账号</string>
